--- a/martoT.html
+++ b/martoT.html
@@ -4,6 +4,8 @@
 <head>
   <title>Activites on marsile</title>
   <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="Untitled-1.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -30,7 +32,7 @@
   </div>
   <div class="topLinkstwo">
     <p class="ptop">Find a place for your dream vacation</p>
-    <a>downtown or in nature </a>
+    <div class="nature">downtown or in nature</div>
     <div class="searchcontainer">
       <div class="searchLeft"> <i class="fas fa-map-marker-alt"></i></div>
       <div class="searchMid">Plovdiv,Bulgaria </div>
@@ -38,6 +40,7 @@
     </div>
   </div>
   <div class="toplinks3">
+
     <div class="Filters">Filters</div>
     <div class="filter">
       <div class="icons">
@@ -64,8 +67,11 @@
       pets allowed
     </div>
   </div>
-  <P>More then 500 Accomondations allowed in this city
-  <p></p>
+  <div class="accomudationsDiv">
+    <div class="firsticon">
+      <i class="fas fa-info-circle"></i>
+    </div>More then 500 Accomondations allowed in this city
+  </div>
 
   <nav class="container">
     <div class="leftside">
@@ -92,7 +98,7 @@
             <span class="fa fa-star check"></span>
             <span class="fa fa-star check"></span>
             <span class="fa fa-star check"></span>
-            <span class="fa fa-star"></span>
+            <span class="fa fa-star check"></span>
           </div>
         </div>
         <div class="BoxeOnee">
@@ -147,7 +153,8 @@
     </div>
     <div class="rightside">
 
-      <p class="Ptoptop"> Most popular</p>
+      <div class="divTopRight">Most popular<i class="fas fa-chart-line side "></i> </div>
+
 
       <div class="box">
         <div class="boxoneimg">
