--- a/martoT.html
+++ b/martoT.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="start">
 
     <img class="img3" src="img/reservia.png" alt="">
 
@@ -42,13 +42,13 @@
   <div class="toplinks3">
 
     <div class="Filters">Filters</div>
-    <div class="filter">
+    <div class="filterone">
       <div class="icons">
         <i class="fas fa-money-bill-wave"></i>
       </div>
       Lowcost
     </div>
-    <div class="filter">
+    <div class="filterone">
       <div class="icons">
         <i class="fas fa-child"></i>
       </div>
@@ -206,8 +206,8 @@
       </div>
     </div>
   </nav>
-  <div>
-    <p>Activites in Ma asdasdrseille</p>
+  <div class="botbox" >
+    <pc class="botpar">Activites in Ma asdasdrseille</p>
     <div class="BotPictures">
       <div class="bottomTallContainer">
         <div class="imgContainer">
